[package]
name = "rustlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
prost = "0.12"
# Only necessary if using Protobuf well-known types:
prost-types = "0.12"
byteorder = "1.5.0"
memmap2 = "0.9.3"
thiserror = "1.0.51"
tokio = { version = "1.35.1", features= ["time", "sync", "macros", "rt-multi-thread"] }

[build-dependencies]
prost-build = "0.12"